# main/http_server/axe-os/src/app/services/system.service.ts
@@ -182,6 +182,11 @@ export class SystemApiService {
         overclockEnabled: 1,
         asicFastUart: 0,
         autotuneVoltage: 0,
+        powerTargetEnabled: 0,
+        powerTargetMw: 12000,
+        notifyDroppedParse: 0,
+        notifyDroppedDecode: 0,
+        notifyDroppedNoMem: 0,
         useStaticFallback: 0,
         staticIp: "",
         staticGateway: "",
